--- a/login.html
+++ b/login.html
@@ -5,95 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول - Fun X</title>
   <style>
-    body {
-      margin: 0;
-      font-family: "Tahoma", sans-serif;
-      background: linear-gradient(135deg, #1c1c1c, #000);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .login-box {
-      background: #111;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #f00;
-      text-align: center;
-      width: 320px;
-    }
-    h2 {
-      margin-bottom: 20px;
-      color: #f00;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 6px;
-    }
-    button {
-      background: #f00;
-      color: #fff;
-      padding: 12px;
-      border: none;
-      width: 100%;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    button:hover {
-      background: #a00;
-    }
-    .link {
-      margin-top: 15px;
-      display: block;
-      color: #fff;
-    }
-    .link:hover {
-      color: #f00;
-    }
+    body { font-family: Arial, sans-serif; background:#111; color:#fff; text-align:center; }
+    form { margin-top:100px; background:#222; padding:20px; border-radius:10px; display:inline-block; }
+    input { display:block; margin:10px auto; padding:10px; border-radius:5px; border:none; width:80%; }
+    button { background:#f83a00; color:#fff; padding:10px 20px; border:none; border-radius:5px; cursor:pointer; }
+    button:hover { background:#00eaff; color:#000; }
+    a { color:#f83a00; }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>تسجيل الدخول</h2>
+  <h2>تسجيل الدخول</h2>
+  <form id="loginForm">
     <input type="email" id="email" placeholder="البريد الإلكتروني" required>
     <input type="password" id="password" placeholder="كلمة المرور" required>
-    <button id="loginBtn">دخول</button>
-    <a class="link" href="signup.html">إنشاء حساب جديد</a>
-  </div>
+    <button type="submit">دخول</button>
+  </form>
+  <p>ما عندكش حساب؟ <a href="signup.html">إنشاء حساب</a></p>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+    import { auth } from "./firebase.js";
+    import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBwET1o7kvQ9bmaJeYYFrPQiztMMWnzvk8",
-      authDomain: "funx-site.firebaseapp.com",
-      projectId: "funx-site",
-      storageBucket: "funx-site.firebasestorage.app",
-      messagingSenderId: "760681309946",
-      appId: "1:760681309946:web:409b4e70c4e257672b0b43",
-      measurementId: "G-68NP5TBNQT"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    document.getElementById("loginBtn").addEventListener("click", () => {
+    const form = document.getElementById("loginForm");
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
       signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          window.location.href = "index.html";
+        .then(() => {
+          window.location.href = "index.html"; // يدخل مباشرة
         })
-        .catch((error) => {
-          alert("خطأ: " + error.message);
-        });
+        .catch((err) => alert(err.message));
     });
   </script>
 </body>
