--- a/login.html
+++ b/login.html
@@ -1,43 +1,113 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تسجيل الدخول - Fun X</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#111; color:#fff; text-align:center; }
-    form { margin-top:100px; background:#222; padding:20px; border-radius:10px; display:inline-block; }
-    input { display:block; margin:10px auto; padding:10px; border-radius:5px; border:none; width:80%; }
-    button { background:#f83a00; color:#fff; padding:10px 20px; border:none; border-radius:5px; cursor:pointer; }
-    button:hover { background:#00eaff; color:#000; }
-    a { color:#f83a00; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>تسجيل الدخول – Fun X</title>
+<style>
+body {
+    margin:0;
+    padding:0;
+    font-family:"Georgia", serif;
+    background: linear-gradient(180deg,#1c1c1c,#111);
+    color:#fff;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
+}
+.login-box {
+    background: rgba(0,0,0,0.85);
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 0 25px #000;
+    width: 300px;
+    text-align: center;
+}
+.login-box h2 {
+    color: #f83a00;
+    margin-bottom: 20px;
+    text-shadow: 0 0 5px #f83a00;
+}
+.login-box input {
+    width: 90%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius:6px;
+    border:none;
+}
+.login-box button {
+    width: 95%;
+    padding: 10px;
+    background:#f83a00;
+    color:#fff;
+    border:none;
+    border-radius:6px;
+    cursor:pointer;
+    font-size:16px;
+}
+.login-box button:hover { background:#00eaff; color:#000; }
+#errorMsg {
+    color:#ff5555;
+    margin-top:10px;
+    font-size:14px;
+}
+</style>
 </head>
 <body>
-  <h2>تسجيل الدخول</h2>
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-    <input type="password" id="password" placeholder="كلمة المرور" required>
-    <button type="submit">دخول</button>
-  </form>
-  <p>ما عندكش حساب؟ <a href="signup.html">إنشاء حساب</a></p>
 
-  <script type="module">
-    import { auth } from "./firebase.js";
-    import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+<div class="login-box">
+<h2>تسجيل الدخول – Fun X</h2>
+<input type="email" id="email" placeholder="البريد الإلكتروني">
+<input type="password" id="password" placeholder="كلمة المرور">
+<button onclick="login()">دخول</button>
+<div id="errorMsg"></div>
+</div>
 
-    const form = document.getElementById("loginForm");
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          window.location.href = "index.html"; // يدخل مباشرة
-        })
-        .catch((err) => alert(err.message));
+const firebaseConfig = {
+  apiKey: "AIzaSyBwET1o7kvQ9bmaJeYYFrPQiztMMWnzvk8",
+  authDomain: "funx-site.firebaseapp.com",
+  projectId: "funx-site",
+  storageBucket: "funx-site.appspot.com",
+  messagingSenderId: "760681309946",
+  appId: "1:760681309946:web:409b4e70c4e257672b0b43"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+function login(){
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const errorMsg = document.getElementById('errorMsg');
+
+    if(email === "" || password === ""){
+        errorMsg.innerText = "من فضلك املأ جميع الحقول!";
+        return;
+    }
+
+    signInWithEmailAndPassword(auth, email, password)
+    .then((userCredential) => {
+        // تسجيل الدخول ناجح
+        localStorage.setItem('loggedIn', 'true'); // حفظ حالة الدخول
+        window.location.href = "index.html";
+    })
+    .catch((error) => {
+        errorMsg.innerText = "البريد أو كلمة المرور غير صحيحة!";
     });
-  </script>
+}
+
+// لو سبق تسجيل الدخول نفتح index مباشرة
+window.onload = () => {
+    if(localStorage.getItem('loggedIn') === 'true'){
+        window.location.href = "index.html";
+    }
+}
+</script>
+
 </body>
 </html>
