--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@ body {
 </div>
 
 <script>
-// إذا المستخدم سجل قبل كده، نرجعه على index مباشرة
+// لو سجل المستخدم قبل كده، يروح مباشرة للصفحة الرئيسية
 if(localStorage.getItem('signedUp')){
     window.location.href = 'index.html';
 }
