--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@ if(!localStorage.getItem('signedUp')){
 </section>
 
 <div id="notify">🎉 تم إصدار تحديث جديد! اضغط هنا لمشاهدة التفاصيل</div>
-<audio id="clickSound" src="click.mp3"></audio>
-<audio id="bgMusic" src="background.mp3" loop autoplay></audio>
+<audio id="clickSound" src="Awkward Apocalyptic Pickup.mp3"></audio>
+<audio id="bgMusic" src="mixkit-select-click-1109.wav" loop autoplay></audio>
 
 <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
 
@@ -260,4 +260,5 @@ if(!localStorage.getItem('updateSeen')){
 </script>
 </body>
 </html>
+
 
